# xmodelconverter_iw3

./: .gitignore  CMakeLists.txt  COD4_IMPLEMENTATION.md  README.md  animation.cpp  iwi.h  main.cpp  model.cpp  parts.cpp  surface.cpp  types.h  util.h
build2/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  xmodelconverteriw3.sln  xmodelconverteriw3.vcxproj  xmodelconverteriw3.vcxproj.filters
